--- a/Frontend1/public/index.html
+++ b/Frontend1/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="A place where you can buy anything related to technology"
     />
+    <meta name="cryptomus" content="46622219" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>DIGIXMART</title>
